--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -2,7 +2,18 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-.alert-container {}
+.alert-container .col-12 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.site-wide-alert {
+    border-radius:0;
+    margin-bottom:0;
+    padding: 5px 15px;
+    background-color: #eec802;
+    border-color:#eec802;
+}
 
 .callout-container {
     height: 100vh;
@@ -52,6 +63,36 @@ body {
     width: 35px;
 }
 
+/*Navbar*/
+
+.navalert-container {
+    position:absolute;
+    top:0;
+    left:0;
+    padding-left:0;
+    padding-right:0;
+    z-index: 1;
+}
+
+.navbar {
+    margin-bottom: 0;
+    border:0;
+    width: 100%;
+    background-color: rgba(0, 0, 0, 0);
+}
+
+.navbar .navbar-toggler {
+    border: 0;
+}
+
+.navbar-brand {
+    font-weight: bold;
+}
+
+.navbar .navbar-nav a {
+    font-weight:bold;
+}
+
 /*Jumbotron*/
 
 .jumbotron {
@@ -75,3 +116,24 @@ body {
     color: #d0d0d0;
 }
 
+/*Buttons*/
+
+.btn--cta {
+    font-weight: bold;
+    border-radius: 23px;
+    width: 160px;
+}
+
+.btn--red {
+    color: white;
+    background-color: #f05f40;
+    border-color: #f05f40;
+}
+
+.btn--red:hover,
+.btn--red:active,
+.btn--red:focus,
+.btn--red:active:focus {
+    background-color: #f05f40;
+    border-color: #f05f40;
+}
