--- a/bootstrap/css/style.css
+++ b/bootstrap/css/style.css
@@ -2,62 +2,103 @@ body {
     font-family: 'Roboto', sans-serif;
 }
 
-.alert-container .col-12 {
-    padding-left: 0;
-    padding-right: 0;
+/* Containers */
+
+.container-wrapper {}
+
+.container-wrapper--red {
+    background-color: #f05f40;
+    color: white;
 }
 
-.site-wide-alert {
-    border-radius:0;
-    margin-bottom:0;
-    padding: 5px 15px;
-    background-color: #eec802;
-    border-color:#eec802;
-}
+.alert-container {}
 
 .callout-container {
     height: 100vh;
 
-    background: url("../images/whiskey-background.jpg") no-repeat bottom right fixed; 
+    background: url('../images/whiskey-background.jpg') no-repeat bottom right fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-
+    
     display: flex;
-    align-items:center;
+    align-items: center;
     justify-content: center;
 
-    position:relative;
-
+    position: relative;
 }
 
 .opaque-overlay {
     position: absolute;
-    top:0;
-    left:0;
+    top: 0;
+    left: 0;
     height: 100%;
     width: 100%;
-    background-color: rgba(0, 0, 0, S);
+    background-color: rgba(0, 0, 0, 0.5);
 }
 
-.quotes-container {}
+.content-container {
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
 
-.features-container {}
+/* Navbar */
 
-/*Page Headers */
+.navalert-container {
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 1;
+    padding-left: 0;
+    padding-right: 0;
+}
 
-.page-header {
+.navbar {
     margin-bottom: 0;
-    border-bottom: 0;
-    text-align: center;
+    width: 100%;
+    background-color: rgba(0, 0, 0, .25);
+    border: 0;
 }
 
-page-header h2 {
-    margin-top: 0;
+.navbar .navbar-toggler {
+    border: 0;
 }
 
-/*Block dividers*/
+.navbar .navbar-brand {
+    font-weight: bold;
+}
+
+.navbar .navbar-nav a {
+    font-weight: bold;
+}
+
+
+/* Jumbotron */
+
+.jumbotron {
+    background-color: transparent;
+}
+
+.jumbotron h1 {
+    color: white;
+    font-weight: bold;
+    margin-bottom: 30px;
+    color: white;
+}
+
+.jumbotron .lead {
+    color: #a7a7a7;
+    margin: 25px 0;
+}
+
+.jumbotron small {
+    font-size: 60%;
+    font-style: italic;
+    color: #d0d0d0;
+}
+
+/* Block dividers */
 
 .block-divider {
     width: 75px;
@@ -67,75 +108,18 @@ page-header h2 {
 }
 
 .block-divider--orange {
-    background-color: #f0Sf40;
+    background-color: #f05f40;
+}
 
+.block-divider--white {
+    background-color: white;
 }
 
 .block-divider--short {
     width: 35px;
 }
 
-/*Content Containers*/
-
-content-container {
-    padding-top: 75px;
-    padding-bottom: 75px;
-}
-
-/*Navbar*/
-
-.navalert-container {
-    position:absolute;
-    top:0;
-    left:0;
-    padding-left:0;
-    padding-right:0;
-    z-index: 1;
-}
-
-.navbar {
-    margin-bottom: 0;
-    border:0;
-    width: 100%;
-    background-color: rgba(0, 0, 0 .25);
-}
-
-.navbar .navbar-toggler {
-    border: 0;
-}
-
-.navbar-brand {
-    font-weight: bold;
-}
-
-.navbar .navbar-nav a {
-    font-weight:bold;
-}
-
-/*Jumbotron*/
-
-.jumbotron {
-    background-color:transparent;
-}
-
-.jumbotron-header {
-    color: white;
-    font-weight: bold;
-    margin-bottom: 30px;
-}
-
-.jumbotron .lead {
-    margin: 25px 0;
-    color: #a7a7a7
-}
-
-.jumbotron small {
-    font-size: 60%;
-    font-style: italic;
-    color: #d0d0d0;
-}
-
-/*Buttons*/
+/* Buttons */
 
 .btn--cta {
     font-weight: bold;
@@ -153,6 +137,65 @@ content-container {
 .btn--red:active,
 .btn--red:focus,
 .btn--red:active:focus {
-    background-color: #f05f40;
-    border-color: #f05f40;
+    background-color: #df4929;
+    border-color: #df4929;
+    color: white;
+}
+
+/* Alert */
+
+.alert-container .col-12 {
+    padding-left: 0;
+    padding-right: 0;
+}
+
+.site-wide-alert {
+    color: #544600;
+    background-color: #eec802;
+    border-color: #eec802;
+    padding: 5px 15px;
+    margin-bottom: 0;
+    border: 1px solid transparent;
+    border-radius: 0;
+}
+
+/* Page Headers */
+
+.page-header {
+    margin-bottom: 0;
+    border-bottom: 0;
+    text-align: center;
+}
+
+.page-header h2 {
+    margin-top: 0;
+}
+
+/* Quotes */
+
+.quotes .page-header {
+    margin-bottom: 25px;
+}
+
+/* Features */
+
+.feature {
+    text-align: center;
+    margin-bottom: 40px;
+}
+
+.feature i {
+    margin-bottom: 20px;
+    font-size: 45px;
+    line-height: 45px;
+}
+
+.feature .btn {
+    background-color: white;
+    border-color: white;
+    border-radius: 15px;
+    min-width: 100px;
+    font-weight: bold;
+    margin-top: 10px;
+    color: #f05f40;
 }
